--- a/src/components/common/TextField/TextField.css
+++ b/src/components/common/TextField/TextField.css
@@ -1,9 +1,11 @@
 .namesake-text-field {
+  min-width: 0;
   color: var(--text-color);
 
   .react-aria-Input,
   .react-aria-TextArea {
     display: block;
+    max-width: 100%;
     padding: var(--space-s) var(--space-m);
     margin: 0;
     font-size: var(--step-0);
