--- a/src/components/forms/FormContainer/FormContainer.css
+++ b/src/components/forms/FormContainer/FormContainer.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   gap: var(--space-m);
   width: 100%;
+  min-width: 0;
 
   &:not([data-inline]) {
     min-height: 100dvh;
@@ -12,6 +13,7 @@
 
 .form-container-content {
   width: 100%;
+  min-width: 0;
 
   .form-container:not([data-inline]) & {
     padding-block-end: var(--space-xl);
